--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.8"
+        "livewire/livewire": "^2.8",
+        "protonemedia/laravel-cross-eloquent-search": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
